--- a/UI/Test/PDL1ResultPage.xaml
+++ b/UI/Test/PDL1ResultPage.xaml
@@ -93,7 +93,7 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Stain Percent:</TextBlock>
-                    <TextBox Name="TextBoxStainPercent" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.StainPercent}" TextWrapping="Wrap" AcceptsReturn="True" LostFocus="TextBoxStainPercent_LostFocus" />
+                    <TextBox Name="TextBoxStainPercent" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.StainPercent}" TextWrapping="Wrap" AcceptsReturn="True" LostFocus="TextBoxStainPercent_LostFocus" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Result:</TextBlock>
                     <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="Result" 
