--- a/UI/Mongo/MongoMigrationWindow.xaml
+++ b/UI/Mongo/MongoMigrationWindow.xaml
@@ -58,9 +58,9 @@
                 <MenuItem Header="Update Out Of Sync Count" Click="MenuItemUpdateOutOfSyncCount_Click"></MenuItem>
                 <MenuItem Header="Synchronize" Click="MenuItemSynchronize_Click"></MenuItem>                
             </MenuItem>
-            <MenuItem Header="Write JSON">
-                <MenuItem Header="Write JSON string in AO table" Click="MenuItemWriteJson_Click"></MenuItem>
-                <MenuItem Header="Synchronize" Click="MenuItemSynchronize_Click"></MenuItem>
+            <MenuItem Header="Transfer AO">
+                <MenuItem Header="Start AO Transfer" Click="MenuItemStartAOTransfer_Click"></MenuItem>
+                <MenuItem Header="Stop AO Transfer" Click="MenuItemStopAOTransfer_Click"></MenuItem>
             </MenuItem>
         </Menu>
         
