--- a/UI/Test/RASRAFPanelResultPage.xaml
+++ b/UI/Test/RASRAFPanelResultPage.xaml
@@ -42,6 +42,10 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
 
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkSetResults_Click">Set Results</Hyperlink>
+                </TextBlock>
+
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
                 </TextBlock>
