--- a/UI/Test/HPVResultPage.xaml
+++ b/UI/Test/HPVResultPage.xaml
@@ -45,7 +45,7 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 				
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockRemainActiveShowDocument" Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
@@ -161,7 +161,7 @@
 		</Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+		<Button Name="ButtonRemainActiveNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
 
 	</Grid>
 </Test:ResultControl>
