Add nullable int converter to app.xaml as static resource

--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -58,6 +58,7 @@
 		<converter:ResultCodeResultConverter x:Key="ResultCodeResultConverter"/>
 
 		<converter:PanelSetIdConverter x:Key="PanelSetIdConverter"/>
+    	<converter:NullableIntConverter x:Key="NullableIntConverter" />
 
 		<validationRules:IntValidation x:Key="IntValidation"/>
         <validationRules:ShortDateTimeValidation x:Key="ShortDateTimeValidation"/>
