--- a/UI/Login/SearchSelectionPage.xaml
+++ b/UI/Login/SearchSelectionPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
-	<Grid>
+	<Grid Margin="2,2,2,2">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition></ColumnDefinition>
 		</Grid.ColumnDefinitions>
@@ -67,6 +67,32 @@
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="End Date:" />
                     <TextBox Name="TextBoxEndDate" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=KeyWordEndDate, Converter={StaticResource ShortDateConverter}}" />
                     
+                    <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Click="ButtonSpecimenDescriptionSearch_Click">Search</Button>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Test">
+                <Grid Grid.Column="0" Grid.Row="1" Margin="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="100"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="Key Word:" />
+                    <TextBox Name="TextBoxTest" Grid.Column="1" Grid.Row="0" Margin="3" HorizontalAlignment="Stretch" 
+					 Text="{Binding Path=SpecimenDescription}" KeyUp="TextBoxSpecimenKeyWord_KeyUp" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="Start Date:" />
+                    <TextBox Name="TextBoxTestStartDate" Grid.Column="1" Grid.Row="1" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=KeyWordStartDate, Converter={StaticResource ShortDateConverter}}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="End Date:" />
+                    <TextBox Name="TextBoxTestEndDate" Grid.Column="1" Grid.Row="2" Margin="3" HorizontalAlignment="Stretch" Text="{Binding Path=KeyWordEndDate, Converter={StaticResource ShortDateConverter}}" />
+
                     <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Click="ButtonSpecimenDescriptionSearch_Click">Search</Button>
                 </Grid>
             </TabItem>
