Change BCellEnum and TCellSubset values to double?

--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -59,8 +59,9 @@
 
 		<converter:PanelSetIdConverter x:Key="PanelSetIdConverter"/>
     	<converter:NullableIntConverter x:Key="NullableIntConverter" />
+        <converter:NullableDoubleConverter x:Key="NullableDoubleConverter" />
 
-		<validationRules:IntValidation x:Key="IntValidation"/>
+        <validationRules:IntValidation x:Key="IntValidation"/>
         <validationRules:ShortDateTimeValidation x:Key="ShortDateTimeValidation"/>
         <validationRules:ShortDateValidation x:Key="ShortDateValidation"/>
         <validationRules:BirthDateValidation x:Key="BirthDateValidation"/>
