--- a/UI/Test/BCellEnumerationResultPage.xaml
+++ b/UI/Test/BCellEnumerationResultPage.xaml
@@ -91,28 +91,28 @@
 					</Grid.RowDefinitions>
 
 					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">WBC:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.WBC, Converter={StaticResource NullableIntConverter}}" />
+					<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.WBC, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Lymphocyte Percentage:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.LymphocytePercentage, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.LymphocytePercentage, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD19 B-Cell Positive Count:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19BCellPositiveCount, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19BCellPositiveCount, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD19 B-Cell Positive Percent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19BCellPositivePercent, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19BCellPositivePercent, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD20 B-Cell Positive Count:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20BCellPositiveCount, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20BCellPositiveCount, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD20 B-Cell Positive Percent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20BCellPositivePercent, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20BCellPositivePercent, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD19 Absolute Count:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19AbsoluteCount, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD19AbsoluteCount}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD20 Absolute Count:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20AbsoluteCount}" />
+                    <TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD20AbsoluteCount}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
 					<TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" />
