--- a/UI/Test/TCellSubsetAnalysisResultPage.xaml
+++ b/UI/Test/TCellSubsetAnalysisResultPage.xaml
@@ -83,13 +83,13 @@
 					</Grid.RowDefinitions>
 
 					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD3 Percent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD3Percent, Converter={StaticResource NullableIntConverter}}" />
+					<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD3Percent, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4 Percent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD4Percent, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD4Percent, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD8 Percent:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD8Percent, Converter={StaticResource NullableIntConverter}}" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD8Percent, Converter={StaticResource NullableDoubleConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4/CD8 Ratio:</TextBlock>
 					<TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD4CD8Ratio}" />
